2010-11-10  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Complex text does not have full CSS text-shadow support
        https://bugs.webkit.org/show_bug.cgi?id=45597

        Add a test which verifies text-shadow on complex text for the GTK+
        port. This can easily be made into a cross-platform test with baselines
        for other ports.

        * platform/gtk/fonts/complex-text-shadows-expected.checksum: Added.
        * platform/gtk/fonts/complex-text-shadows-expected.png: Added.
        * platform/gtk/fonts/complex-text-shadows-expected.txt: Added.
        * platform/gtk/fonts/complex-text-shadows.html: Added.
2010-11-10  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Complex text does not have full CSS text-shadow support
        https://bugs.webkit.org/show_bug.cgi?id=45597

        Add ContextShadow support to FontGtk, which enables non-solid shadows
        for complex text rendering.

        Test: platform/gtk/fonts/complex-text-shadows.html

        * platform/graphics/gtk/FontGtk.cpp:
        (WebCore::destroyPangoRegion): Added this helper, which helps reduce
        the number of #ifdefs when dealing with GTK+ region type differences.
        (WebCore::getPangoRegionExtents): Ditto.
        (WebCore::drawGlyphsShadow): Added this helper which either renders
        a solid shadow manually or uses ContextShadow to render a blurry shadow.
        (WebCore::Font::drawComplexText): Use the new helpers.

Canonical link: https://commits.webkit.org/62228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71750 268f45cc-cd09-0410-ab3c-d52691b4dbfc